public/style/base.css
/* General structure */
:root {
    --purple: #210340;
    --purple-lighter1: #6132bc;
    --purple-lighter2: #5e4888;
    --purple-very-light: #f2e9ff;
    --font-default-color: white;
    --cyan: #0dcaf0;
    /*--bg-alert-purple-light: #cfe2ff;*/
}

/* Fonts */
:root {
    font-family: "Inter", sans-serif;
}

@supports (font-variation-settings: normal) {
    :root { font-family: "InterVariable", sans-serif; font-optical-sizing: auto; }
}

html {
    height: 100%;
    background-color: --purple;
}

body {
    font-family: "Inter", sans-serif;
    background-color: var(--purple);
    color: var(--font-default-color);
}

header {
    text-align: center;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

nav svg {
    fill: whitesmoke;
    margin-top: 0.5em;
}

h1 {
    font-weight: 400;
}

h2, h3 {
    font-weight: 300;
}

.table {
    margin: 0 auto;
    width: 100%;
}

.table td,
.table th {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}

.force-default-bg  {
    box-shadow: unset !important;
}


/* home page */
#homepage h1 {
    font-size: 3.5rem;
    margin-bottom: 2em;
}

#homepage :is(h1, h2, h3) {
    margin-top: 1em;
}

#homepage img {
    width: 70%;
}

/* Milestones caption on top of list */
body[id^='release_'] caption {
    caption-side: top;
}

/* Button below version number at the top should have consistent width */
body[id^='release_'] h1 + a,
body[id^='release_'] h1 + span {
    min-width: 13em;
}

#release_esr table + .table  th {
    text-align: center;
}

.table-fxt-clean,
.table-fxt-clean th,
.table-fxt-clean td  {
    border-color: var(--purple-very-light);
}

.table-fxt-clean {
    border-spacing: 0;
    border-collapse: separate;
    overflow: hidden;
}

.rounded-6 {
    border-radius: 6px;
    border: 1px solid black;
}

#release_esr .table + .table td {
    width: 6em;
}

body[id^='release_']  .table td {
    text-align: right;
    white-space: nowrap;
    width: 9em;
}

#release_esr .table td:last-child {
    text-align: right;
}

#release_esr .table td {
    text-align: center;
}

body[id^='release_'] .table th details p {
    padding: 0.5rem;
    margin: 0.5em;
    border-left: 3px solid lightgray;
    font-size: small;
    font-weight: normal;
}

/* hide working days when <details> tag not popen */
body[id^='release_']:not(#release_esr) th:has(details) + td small {
    display:none;
}

body[id^='release_']:not(#release_esr) th:has(details[open]) + td small {
    display: inline;
}

body[id^='release_']:not(#release_esr) .table th summary::marker {
    color: lightgray;
    font-size:  small;
}

/* Make the release pages more readable in narrow portrait mobile mode */
@media only screen and (max-width: 400px) and (orientation: portrait) {
    body[id^='release_']:not(#release_esr) {
        padding:  6px;
        font-size: 75%;
    }

    body[id^='release_']:not(#release_esr) nav {
        padding-top: 0 !important;
    }

    body[id^='release_']:not(#release_esr) h1 {
        font-size: x-large; !important;
        padding-bottom: 0;
    }

    body[id^='release_']:not(#release_esr) h1 .btn {
        font-size: small !important;
        margin-top: 5px;
    }

    body[id^='release_']:not(#release_esr) table {
        min-width:100%;
    }

    body[id^='release_']:not(#release_esr) td,
    body[id^='release_']:not(#release_esr) th {
        padding: 4px;
    }

    body[id^='release_']:not(#release_esr) > table:first-of-type th {
        width: 50% !important;
    }

    body[id^='release_']:not(#release_esr) header {
        margin-bottom: 8px !important;
    }

    body[id^='release_']:not(#release_esr) div.w-50 {
        padding: 8px 0 !important;
    }
}
@media only screen and (max-width: 460px) {
    /* deactivate bootstrap 50% & 75% width on narrow screens */
    .w-50,
    .w-75 {
        width: auto !important;
    }

    #homepage h1 {
        font-size: 2.5rem;
        margin-bottom: 0.5em;
    }

    #homepage :is(h1, h2, h3) {
        margin-top: 0.5em;
    }

    #homepage h3 {
        line-height: 2.7em;
    }

    #homepage div.col-sm {
        margin-bottom: 4em;
    }

    #homepage h3.text-center {
        margin-bottom: 1em;
        margin-top: 0;
    }

    #homepage .alert-primary {
        padding: 0.5rem 0.25rem;
    }

    /* Split the Last uplift tag on mobile */
    body[id^='release_']:not(#release_esr) .table th small span::before{
        content: "\a";
        white-space: pre;
    }

    /* limit horizontal scroll */
    body[id^='release_']:not(#release_esr) .table td {
        text-wrap: auto;
    }

    #beta table#summary ul {
        display: flex;
        flex-direction: column;
    }
}

/* About tooltip */
 #homepage .information {
    color: white;
 }

 #homepage .information:hover {
    color: #ffe343;
 }

/* About page */
#about h3 {
    margin-top: 1em;
}

footer {
    text-align: center;
    margin-top: 2em;
}

.text-color-1 {
    color: var(--purple-lighter1) !important;
    text-shadow: -1px 0px 0px lightgray;
}

.anchor-link {
    visibility: hidden;
    display: inline-block;
    margin-left: -1em;
}

h3:hover .anchor-link {
    visibility: visible;
}

h3:target {
   color: var(--cyan);
}

h3:target + table {
    box-shadow: 0px 0px 20px 0px var(--cyan);
}

/* Nightly Page */
#nightly ul.list-group {
    word-break: break-word;
}

#nightly table  {
/*    table-layout: fixed;*/
}

#nightly table td a {
    word-wrap: break-word;
}

#nightly table tr th:nth-child(1) {
    width:6em;
}

#nightly table tr th:nth-child(2){
    width: 15em;
}

#nightly table tr td:nth-child(2){
    word-break: break-word;
}

#nightly table tr th:nth-child(3) {
    width: 5em;
}

/* bzimpact value table, avoid fields wrapping on 2 lines */
#nightly table tr table th:nth-child(1) {
   white-space: nowrap;
}

#nightly table thead tr th.sort-asc:after {
    content: "\00A0\25be";
}

#nightly table thead tr th.sort-desc:after {
    content: "\00A0\25b4";
}
/* ... */

